[package]
name = "core"
version = "0.1.0"
authors = ["joooscha <j.loos@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
tui = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
quick-xml = { version = "*", features = ["serialize"] }
reqwest = { version = "*", features = ["blocking"] }
toml = "*"
chrono = "*"
dirs-next = "*"
threadpool = "*"
rand = "*"

notification = { path = "../notification" }
