[package]
name = "data"
version = "0.2.0"
authors = ["joooscha <joscha.loos@pm.me>"]
edition = "2018"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
quick-xml = { version = "*", features = ["serialize"] }
reqwest = { version = "*", features = ["blocking"] }
toml = "*"
chrono = "*"
dirs = "*"
threadpool = "*"

data_types = { path = "../data_types" }
notification = { path = "../notification" }
