[package]
name = "data"
version = "0.4.0"
authors = ["joooscha <joscha.loos@pm.me>"]
edition = "2018"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
quick-xml = { version = "*", features = ["serialize"] }
reqwest = { version = "*", features = ["blocking"] }
toml = "*"
chrono = "*"
dirs-next = "*"
threadpool = "*"
tui = "*"

feed_types = { path = "../feed_types" }
notification = { path = "../notification" }
