[package]
name = "fetch_data"
version = "0.3.0"
authors = ["joooscha <joscha.loos@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
tui = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
quick-xml = { version = "*", features = ["serialize"] }
reqwest = { version = "*", features = ["blocking"] }
regex = "*"
toml = "*"
chrono = "*"
dirs = "*"
threadpool = "*"
yaserde = "*"
