[package]
name = "fetch_data"
version = "0.4.1"
authors = ["joooscha <joscha.loos@pm.me>"]
edition = "2018"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
quick-xml = { version = "*", features = ["serialize"] }
reqwest = { version = "*", features = ["blocking"] }
toml = "*"
chrono = "*"
dirs = "*"
threadpool = "*"

data_types = { path = "../data_types" }
